--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-css-modules": "^4.7.11",
     "react-dom": "^17.0.2",
     "react-router": "^6.2.1",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
