--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.26.0",
     "classnames": "^2.3.1",
     "css-loader": "^6.6.0",
+    "firebase": "^9.6.7",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-css-modules": "^4.7.11",
