--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "css-loader": "^6.6.0",
     "firebase": "^9.6.7",
     "node-sass": "^7.0.1",
+    "notistack": "^2.0.3",
     "react": "^17.0.2",
     "react-css-modules": "^4.7.11",
     "react-dom": "^17.0.2",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-toastify": "^8.2.0",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
     "styled-components": "^5.3.3",
