--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "react-hot-toast": "^2.2.0",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.0",
     "react-toastify": "^8.2.0",
     "sass-loader": "^12.6.0",
     "shortid": "^2.2.16",
