--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.26.0",
+    "axios": "^0.26.1",
     "classnames": "^2.3.1",
-    "css-loader": "^6.6.0",
+    "css-loader": "^6.7.1",
     "date-fns": "^2.28.0",
     "firebase": "^9.6.7",
     "node-sass": "^7.0.1",
@@ -66,6 +66,7 @@
     "gh-pages": "^3.2.3",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.4",
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "webpack-cli": "^4.9.2"
   }
 }
